manifests/tasman-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tasman
spec:
  backend:
    serviceName: tasman
    servicePort: 8080
